--- a/responsive/html/index.html
+++ b/responsive/html/index.html
@@ -139,11 +139,11 @@
 <section id="news" class="section">
   <div class="titleBox">
     <h2>HITOP NEWS</h2>
-    <p>도시경관사업의 시장을 선도하는 하이탑의다양한 소식을 전해드립니다.</p>
+    <p>도시경관사업의 시장을 선도하는 하이탑의 다양한 소식을 전해드립니다.</p>
   </div>
   <div class="container">
-    <ul class="list swiper-wrapper">
-      <li class="swiper-slide">
+    <ul class="list">
+      <li>
         <a href="">
           <img src="../images/main/news01.jpg" alt="" />
           <div class="desc">
@@ -155,7 +155,7 @@
           </div>
         </a>
       </li>
-      <li class="swiper-slide">
+      <li>
         <a href="">
           <img src="../images/main/news02.jpg" alt="" />
           <div class="desc">
@@ -168,7 +168,7 @@
           </div>
         </a>
       </li>
-      <li class="swiper-slide">
+      <li>
         <a href="">
           <img src="../images/main/news03.jpg" alt="" />
           <div class="desc">
