--- a/responsive/html/notice.html
+++ b/responsive/html/notice.html
@@ -30,9 +30,7 @@
               <div class="desc">
                 <h3>선거휴무공지 5월달에 더이상의 휴일은 없습니다.</h3>
                 <p class="txt">
-                  혼인과 가족생활은 개인의 존엄과 양성의 평등을 기초로 성립되고 유지되어야 하며,
-                  국가는 이를 보장한다. 군인·군무원·경찰공무원 기타 법률이 정하는 자가 전투·훈련등
-                  직무집행과 관련하여
+                  혼인과 가족생활은 개인의 존엄과 양성의 평등을 기초로 성립되고 유지되어야 하며, 국가는 이를 보장한다. 군인·군무원·경찰공무원 기타 법률이 정하는 자가 전투·훈련등 직무집행과 관련하여
                 </p>
                 <p class="date">2022-05-09</p>
               </div>
@@ -44,10 +42,8 @@
               <div class="desc">
                 <h3>선거휴무공지</h3>
                 <p class="txt">
-                  혼인과 가족생활은 개인의 존엄과 양성의 평등을 기초로 성립되고 유지되어야 하며,
-                  국가는 이를 보장한다. 군인·군무원·경찰공무원 기타 법률이 정하는 자가 전투·훈련등
-                  직무집행과 관련하여 받은 손해에 대하여는 법률이 정하는 보상외에 국가 또는
-                  공공단체에 공무원의
+                  혼인과 가족생활은 개인의 존엄과 양성의 평등을 기초로 성립되고 유지되어야 하며, 국가는 이를 보장한다. 군인·군무원·경찰공무원 기타 법률이 정하는 자가 전투·훈련등 직무집행과 관련하여
+                  받은 손해에 대하여는 법률이 정하는 보상외에 국가 또는 공공단체에 공무원의
                 </p>
                 <p class="date">2022-05-09</p>
               </div>
@@ -59,10 +55,8 @@
               <div class="desc">
                 <h3>선거휴무공지</h3>
                 <p class="txt">
-                  혼인과 가족생활은 개인의 존엄과 양성의 평등을 기초로 성립되고 유지되어야 하며,
-                  국가는 이를 보장한다. 군인·군무원·경찰공무원 기타 법률이 정하는 자가 전투·훈련등
-                  직무집행과 관련하여 받은 손해에 대하여는 법률이 정하는 보상외에 국가 또는
-                  공공단체에 공무원의 직무상 불법행위로 인한 배상은 청구할 수 없다.
+                  혼인과 가족생활은 개인의 존엄과 양성의 평등을 기초로 성립되고 유지되어야 하며, 국가는 이를 보장한다. 군인·군무원·경찰공무원 기타 법률이 정하는 자가 전투·훈련등 직무집행과 관련하여
+                  받은 손해에 대하여는 법률이 정하는 보상외에 국가 또는 공공단체에 공무원의 직무상 불법행위로 인한 배상은 청구할 수 없다.
                 </p>
                 <p class="date">2022-05-09</p>
               </div>
