--- a/responsive/html/index.html
+++ b/responsive/html/index.html
@@ -51,7 +51,7 @@
     <ul class="list">
       <li>
         <a href="">
-          <img src="../images/main/mainLink01.jpg" alt="" />
+          <img src="../images/main/mainLink01.jpg" alt="최고의 기술, 최상의 조직" />
           <div class="txtBox">
             <p>최고의 기술, 최상의 조직</p>
             <!-- prettier-ignore -->
@@ -61,7 +61,7 @@
       </li>
       <li>
         <a href="">
-          <img src="../images/main/mainLink02.jpg" alt="" />
+          <img src="../images/main/mainLink02.jpg" alt="하이탑이 꿈꾸는 세상" />
           <div class="txtBox">
             <p>하이탑이 꿈꾸는 세상</p>
             <!-- prettier-ignore -->
@@ -71,7 +71,7 @@
       </li>
       <li>
         <a href="">
-          <img src="../images/main/mainLink03.jpg" alt="" />
+          <img src="../images/main/mainLink03.jpg" alt="변화를 주도하는 하이탑인" />
           <div class="txtBox">
             <p>변화를 주도하는 하이탑인</p>
             <!-- prettier-ignore -->
@@ -93,7 +93,7 @@
     <ul class="list">
       <li>
         <a href="">
-          <img src="../images/main/businessField01.jpg" alt="" />
+          <img src="../images/main/businessField01.jpg" alt="경관용 포장재 : 아트크리트, 텍스크리트, 패턴크리트, 흙콘크리트, 실코트" />
           <div class="txtBox">
             <h3>경관용 포장재</h3>
             <p>아트크리트, 텍스크리트, 패턴크리트, 흙콘크리트, 실코트</p>
@@ -103,30 +103,30 @@
       </li>
       <li>
         <a href="">
-          <img src="../images/main/businessField02.jpg" alt="" />
+          <img src="../images/main/businessField02.jpg" alt="기능성 포장재 : 탄성포장재, 충격흡수바닥재, 미끄럼방지포장재, 폴리우레아방수재, 열교환도료" />
           <div class="txtBox">
-            <h3>경관용 포장재</h3>
-            <p>아트크리트, 텍스크리트, 패턴크리트, 흙콘크리트, 실코트</p>
+            <h3>기능성 포장재</h3>
+            <p>탄성포장재, 충격흡수바닥재, 미끄럼방지포장재, 폴리우레아방수재, 열교환도료</p>
           </div>
         </a>
         <div class="border"><span></span><span></span><span></span><span></span></div>
       </li>
       <li>
         <a href="">
-          <img src="../images/main/businessField03.jpg" alt="" />
+          <img src="../images/main/businessField03.jpg" alt="조립식 바닥재 : PP바닥재, 잔디보호매트, 헥사페이브, 코코블럭" />
           <div class="txtBox">
-            <h3>경관용 포장재</h3>
-            <p>아트크리트, 텍스크리트, 패턴크리트, 흙콘크리트, 실코트</p>
+            <h3>조립식 바닥재</h3>
+            <p>PP바닥재, 잔디보호매트, 헥사페이브, 코코블럭</p>
           </div>
         </a>
         <div class="border"><span></span><span></span><span></span><span></span></div>
       </li>
       <li>
         <a href="">
-          <img src="../images/main/businessField04.jpg" alt="" />
+          <img src="../images/main/businessField04.jpg" alt="스포츠필드 : 아크릴바닥재, 육상트랙, 우레탄바닥재, 학교운동장" />
           <div class="txtBox">
-            <h3>경관용 포장재</h3>
-            <p>아트크리트, 텍스크리트, 패턴크리트, 흙콘크리트, 실코트</p>
+            <h3>스포츠필드</h3>
+            <p>아크릴바닥재, 육상트랙, 우레탄바닥재, 학교운동장</p>
           </div>
         </a>
         <div class="border"><span></span><span></span><span></span><span></span></div>
@@ -143,8 +143,8 @@
   <div class="container">
     <ul class="list">
       <li>
-        <a href="">
-          <img src="../images/main/news01.jpg" alt="" />
+        <a href="#">
+          <img src="../images/main/news01.jpg" alt="선거휴무공지 5월달에 더이상의 휴일은 없습니다." />
           <div class="desc">
             <h3>선거휴무공지 5월달에 더이상의 휴일은 없습니다.</h3>
             <p class="txt">
@@ -155,8 +155,8 @@
         </a>
       </li>
       <li>
-        <a href="">
-          <img src="../images/main/news02.jpg" alt="" />
+        <a href="#">
+          <img src="../images/main/news02.jpg" alt="선거휴무공지" />
           <div class="desc">
             <h3>선거휴무공지</h3>
             <p class="txt">
@@ -168,8 +168,8 @@
         </a>
       </li>
       <li>
-        <a href="">
-          <img src="../images/main/news03.jpg" alt="" />
+        <a href="#">
+          <img src="../images/main/news03.jpg" alt="선거휴무공지" />
           <div class="desc">
             <h3>선거휴무공지</h3>
             <p class="txt">
@@ -194,7 +194,7 @@
   </div>
   <div class="container">
     <div class="btns">
-      <a href="" class="btn confirm">견적문의 바로가기</a>
+      <a href="#" class="btn confirm">견적문의 바로가기</a>
     </div>
   </div>
 </section>
