--- a/responsive/html/market.html
+++ b/responsive/html/market.html
@@ -24,7 +24,7 @@
     <div class="container">
       <table class="marketTable">
         <colgroup>
-          <col style="width: * %" />
+          <col />
           <col style="width: 20%" />
           <col style="width: 20%" />
           <col style="width: 18%" />
